# iclr_2024_pg_subspaces

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py  visualize_action_transformation.py
action_space_toolbox/: __init__.py  action_transformation_wrapper.py
action_space_toolbox/analysis/: analysis.py  util.py
action_space_toolbox/base_environments/: controller_base_env.py  pendulum_controller_env.py
action_space_toolbox/callbacks/: additional_training_metrics_callback.py
action_space_toolbox/control_modes/: abstract_position_control_wrapper.py  check_wrapped.py  check_wrapped_dof_information.py  fixed_gains_position_control_wrapper.py  get_control_state.py  optimal_position_control_wrapper.py  position_control_wrapper.py  variable_gains_position_control_wrapper.py  velocity_control_wrapper.py
action_space_toolbox/controller_base/: controller_base_wrapper.py  dmc_controller_base_wrapper.py  gym_mujoco_controller_base_wrapper.py  pendulum_controller_base_wrapper.py
action_space_toolbox/dof_information/: dmc_dof_information_wrapper.py  dof_information_wrapper.py  gym_mujoco_dof_information_wrapper.py  mujoco_dof_information_wrapper.py  pendulum_dof_information_wrapper.py
action_space_toolbox/res/: custom_env_args.yaml  env_args.yaml  original_env_args.yaml  pc_parameters.yaml  vc_parameters.yaml
action_space_toolbox/reward/: reacher_disable_control_reward_wrapper.py
action_space_toolbox/scripts/: add_gradient_step_data.py  analyze.py  combine_metrics.py  compile_results_html.py  convergence_criterion.py  create_all_hc_analysis_plots.py  create_all_learning_curves.py  create_multiline_plots.py  create_plots.py  create_plots_iclr_eigenvalues.py  (+17 more)
action_transformations/: action_transformation_wrapper.py
pg_subspaces/: __init__.py
res/: pd_tuning_fixed_targets.json
scripts/: tune_pd_parameters.py
test/: test_action_transformations.py  test_analysis.py  test_common.py  test_control_modes.py  test_gradient_analysis.py  test_hessian.py  test_high_curvature_analysis.py  test_instantiation.py  test_offline_sac.py  test_sb3_utils_common.py  test_sb3_utils_hessian.py  test_util.py
(+218 files in other folders)
