[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "action_space_toolbox"}

[project]
name = "action_space_toolbox"
description = ""
version = "0.0.1"
authors = [
    {name="Anonymous", email="anonymous@anonymous.com"}
]
dependencies = [
    "dm_control",
    "dmc2gym",
    "filelock",
    "gym[mujoco]",
    "hydra-core",
    "kaleido",
    "numpy",
    "omegaconf",
    "Pillow",
    "plotly",
    "scipy",
    "scikit-image",
    "stable-baselines3[extra]",
    "tensorboard",
    "torch",
    "tqdm"
]

[project.optional-dependencies]
dev = ["pytest"]
