[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "pg_subspaces"}

[project]
name = "pg_subspaces"
description = ""
version = "0.0.1"
authors = [
    {name="Anonymous", email="anonymous@anonymous.com"}
]
dependencies = [
    "dm_control",
    "dmc2gym @ git+https://github.com/jan1854/dmc2gym",
    "filelock",
    "gym[mujoco]==0.21.0",
    "hydra-core",
    "numpy==1.24.1",
    "omegaconf",
    "Pillow",
    "scipy",
    "stable-baselines3[extra]==1.8.0",
    "tensorboard",
    "torch==2.0.1",
    "tqdm"
]

[project.optional-dependencies]
dev = ["pytest"]
