[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["pg_subspaces"]

[project]
name = "pg_subspaces"
description = ""
version = "0.0.1"
authors = [
    {name="Anonymous", email="anonymous@anonymous.com"}
]
dependencies = [
    "dm_control",
    "dmc2gym @ git+https://github.com/jan1854/dmc2gym",
    "filelock",
    "gym[mujoco]==0.21.0",
    "joblib",
    "hydra-core>=1.3.0",
    "numpy==1.24.1",
    "omegaconf",
    "Pillow",
    "scipy",
    "stable-baselines3[extra]==1.8.0",
    "tensorboard",
    "torch==2.1.0",
    "tqdm"
]

[project.optional-dependencies]
extra = [
    "hydra-joblib-launcher>=1.2.0",
    "hydra-ax-sweeper>=1.2.0"
]
dev = ["pytest"]
